# HatClaw-Agent

./: .dockerignore  .env  .gitignore  AGENTS.md  README.md  azure.yaml  azure.yaml.json
TopoClaw-main/TopoClaw/: README.md  README_EN.md  pyproject.toml
TopoClaw-main/TopoClaw/bridge/: package.json
TopoClaw-main/TopoClaw/bridge/src/: index.ts  server.ts  types.d.ts  whatsapp.ts
TopoClaw-main/TopoClaw/chat_tests/: ws_chat_concurrency_runner.py  ws_chat_single_call.py
TopoClaw-main/TopoClaw/topoclaw/: .env.example  __init__.py  __main__.py
TopoClaw-main/TopoClaw/topoclaw/agent/: __init__.py  agent_loop_factory.py  agent_registry.py  browser_use_llm.py  context.py  interactive_task.py  loop.py  memory.py  session_keys.py  skills.py  state_manager.py  subagent.py  task_events.py  task_supervisor.py
TopoClaw-main/TopoClaw/topoclaw/agent/executors/: __init__.py  browser_use_executor.py
TopoClaw-main/TopoClaw/topoclaw/agent/gui/: __init__.py  base.py  gui_models.example.json  mobile.py  prompt_loader.py  registry.py  state_models.py  workspace_layout.py
TopoClaw-main/TopoClaw/topoclaw/agent/prompts/: browser_use_interactive_system_prompt.md
TopoClaw-main/TopoClaw/topoclaw/agent/tools/: __init__.py  academic_search.py  agent_manage.py  arxiv_search.py  ask_user.py  base.py  browser_automation.py  cron.py  (+23 more)
TopoClaw-main/TopoClaw/topoclaw/api/: __init__.py  agent_app.py  device_manager.py
TopoClaw-main/TopoClaw/topoclaw/bus/: __init__.py  events.py  queue.py
TopoClaw-main/TopoClaw/topoclaw/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  slack.py  telegram.py  topomobile.py  weixin.py  whatsapp.py
TopoClaw-main/TopoClaw/topoclaw/cli/: __init__.py  commands.py
TopoClaw-main/TopoClaw/topoclaw/config/: __init__.py  loader.py  paths.py  schema.py
TopoClaw-main/TopoClaw/topoclaw/connection/: __init__.py  device_registry.py  message_adapter.py  thread_binding_registry.py  ws_registry.py
TopoClaw-main/TopoClaw/topoclaw/cron/: __init__.py  service.py  types.py
TopoClaw-main/TopoClaw/topoclaw/heartbeat/: __init__.py  service.py
TopoClaw-main/TopoClaw/topoclaw/models/: __init__.py  api.py  constant.py  gui_mobile.py
TopoClaw-main/TopoClaw/topoclaw/orchestrator/: __init__.py  base.py  engine.py  registry.py
TopoClaw-main/TopoClaw/topoclaw/providers/: __init__.py  azure_openai_provider.py  base.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py  registry.py  service.py  tracked_provider.py  transcription.py
TopoClaw-main/TopoClaw/topoclaw/secure/: __init__.py  toolcall_guard.py
TopoClaw-main/TopoClaw/topoclaw/service/: __init__.py  agent_manage_service.py  binding_service.py  chat_service.py  connection_app_service.py  deeplink_catalog_service.py  gui_mobile_service.py  orchestration_service.py  runtime.py  skills_service.py  token_usage_service.py
TopoClaw-main/TopoClaw/topoclaw/session/: __init__.py  compress_marker.py  manager.py
TopoClaw-main/TopoClaw/topoclaw/skills/: README.md
TopoClaw-main/TopoClaw/topoclaw/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md  __init__.py  skills_filter.json
TopoClaw-main/TopoClaw/topoclaw/utils/: __init__.py  helpers.py  path_guard.py
(+892 files in other folders)
