[project]
name = "topoclaw-ai"
version = "1.2.1"
description = "A lightweight personal AI assistant framework"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "topoclaw contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "litellm>=1.82.1,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "websockets>=16.0,<17.0",
    "websocket-client>=1.9.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "trafilatura>=2.0.0,<3.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "croniter>=6.0.0,<7.0.0",
    "dingtalk-stream>=0.24.0,<1.0.0",
    "python-telegram-bot[socks]>=22.6,<23.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "socksio>=1.0.0,<2.0.0",
    "python-socketio>=5.16.0,<6.0.0",
    "msgpack>=1.1.0,<2.0.0",
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
    "qq-botpy>=1.2.0,<2.0.0",
    "python-socks[asyncio]>=2.8.0,<3.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "chardet>=3.0.2,<6.0.0",
    "openai>=2.26.0,<3.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "fastapi>=0.115.12,<1.0.0",
    "uvicorn[standard]>=0.23.0,<1.0.0",
    "pillow>=12.1.0,<13.0.0",
    "pypdf>=6.6.2,<7.0.0",
    "browser-cookie3>=0.20.1,<1.0.0",
]

[project.optional-dependencies]
matrix = [
    "matrix-nio[e2e]>=0.25.2",
    "mistune>=3.0.0,<4.0.0",
    "nh3>=0.2.17,<1.0.0",
]
gui-native = [
    "anthropic>=0.42.0,<1.0.0",
    "google-genai>=1.0.0,<2.0.0",
]
browser-strict = [
    "browser-use==0.12.0",
]
browser-compat = [
    "browser-use>=0.12.0,<1.0.0",
]
stock = [
    "akshare>=1.14.0,<2.0.0",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
    "matrix-nio[e2e]>=0.25.2",
    "mistune>=3.0.0,<4.0.0",
    "nh3>=0.2.17,<1.0.0",
]

[project.scripts]
topoclaw = "topoclaw.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["topoclaw"]

[tool.hatch.build.targets.wheel.sources]
"topoclaw" = "topoclaw"

# Include non-Python files in skills and templates
[tool.hatch.build]
include = [
    "topoclaw/**/*.py",
    "topoclaw/templates/**/*.md",
    "topoclaw/skills/**/*.md",
    "topoclaw/skills/**/*.sh",
    "topoclaw/agent/gui/prompts/**/*.j2",
    "topoclaw/agent/gui/*.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "topoclaw/",
    "bridge/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.force-include]
"bridge" = "topoclaw/bridge"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
